--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -94,6 +94,7 @@ table {
     border: 1px solid whitesmoke;
     border-bottom: 0;
     border-spacing: 0 2px;
+    width: 100%;
     // display: none;
 
     thead {
